--- a/package.json
+++ b/package.json
@@ -20,8 +20,21 @@
   },
   "dependencies": {
     "expo": "^20.0.0",
-    "react": "16.0.0-alpha.12",
+    "react": "^16.0.0-rc.3",
+    "react-dom": "^15.6.1",
     "react-native": "^0.47.0",
-    "react-native-swipe-gestures": "^1.0.2"
-  }
+    "react-native-swipe-gestures": "^1.0.2",
+    "react-native-textfit": "^0.1.1"
+  },
+  "description": "This project was bootstrapped with [Create React Native App](https://github.com/react-community/create-react-native-app).",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/andreevanatasha/shut-app-native.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/andreevanatasha/shut-app-native/issues"
+  },
+  "homepage": "https://github.com/andreevanatasha/shut-app-native#readme"
 }
