--- a/package.json
+++ b/package.json
@@ -3,9 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "1.3.1",
+    "babel": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
     "jest-expo": "~20.0.0",
+    "react-native-scripts": "1.3.1",
     "react-test-renderer": "16.0.0-alpha.12"
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "react"
+    ]
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
@@ -19,12 +27,15 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "babel-preset-react": "^6.24.1",
     "expo": "^20.0.0",
-    "react": "^16.0.0-rc.3",
-    "react-dom": "^15.6.1",
+    "react": "^16.0.0",
+    "react-dom": "^15.6.2",
     "react-native": "^0.47.0",
+    "react-native-responsive-dimensions": "^1.0.1",
     "react-native-swipe-gestures": "^1.0.2",
-    "react-native-textfit": "^0.1.1"
+    "react-native-textfit": "^0.1.1",
+    "react-textfit": "^1.0.1"
   },
   "description": "This project was bootstrapped with [Create React Native App](https://github.com/react-community/create-react-native-app).",
   "repository": {
