--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "devDependencies": {
     "babel": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
-    "jest-expo": "~20.0.0",
+    "jest-expo": "^21.0.0",
     "react-native-scripts": "1.3.1",
     "react-test-renderer": "16.0.0-alpha.12"
   },
@@ -28,14 +28,12 @@
   },
   "dependencies": {
     "babel-preset-react": "^6.24.1",
-    "expo": "^20.0.0",
-    "react": "^16.0.0",
+    "expo": "^21.0.2",
+    "react": "^16.0.0-alpha.12",
     "react-dom": "^15.6.2",
-    "react-native": "^0.47.0",
+    "react-native": "^0.48.4",
     "react-native-responsive-dimensions": "^1.0.1",
-    "react-native-swipe-gestures": "^1.0.2",
-    "react-native-textfit": "^0.1.1",
-    "react-textfit": "^1.0.1"
+    "react-native-swipe-gestures": "^1.0.2"
   },
   "description": "This project was bootstrapped with [Create React Native App](https://github.com/react-community/create-react-native-app).",
   "repository": {
