--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-native": "^0.48.4",
     "react-native-swipe-gestures": "^1.0.2"
   },
-  "description": "An ultimate app for speechless communication.",
+  "description": "An ultimate app for silent communication.",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/andreevanatasha/shut-app-native.git"
